--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.neo4j.uri=neo4j+s://fc172eac.databases.neo4j.io
+spring.neo4j.uri=bolt://localhost:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=r2bxpiGC9XUiMjcNrzP9_q90sBRKHJH4vRQmMtd3oTU
+spring.neo4j.authentication.password=040520
